--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
@@ -32,7 +32,7 @@
       "LAYOUT": {
         "nodes": [
           {
-            "identifier": "GeometryNodeWarning",
+            "identifier": "GeometryNodeWarning"
             // "after_node": "FunctionNodeInputVector"
           }
         ]
