Fixed wrong rgb curves node being added in the compositor

--- a/node_pie/node_def_files/builtin/CompositorNodeTree_4_5.jsonc
+++ b/node_pie/node_def_files/builtin/CompositorNodeTree_4_5.jsonc
@@ -22,7 +22,7 @@
         ]
       },
       "COLOR": {
-        "nodes": [{ "identifier": "CompositorNodeMixRGB" }, { "identifier": "CompositorNodeCurveRGB" }]
+        "nodes": [{ "identifier": "CompositorNodeMixRGB" }]
       },
       "VECTOR": {
         "nodes": [{ "identifier": "CompositorNodeMapValue" }, { "identifier": "CompositorNodeCurveVec" }]
@@ -118,7 +118,6 @@
               "Linear Light": { "blend_type": "LINEAR_LIGHT" }
             }
           },
-          { "identifier": "ShaderNodeRGBCurve", "after_node": "CompositorNodeInvert" }
         ]
       },
       "VECTOR": {
